--- a/index.html
+++ b/index.html
@@ -20,7 +20,26 @@
       </header>
 
       <aside class="side"> Aside stuff here</aside>
-      <main class="main-content"> Here is where the main content goes</main>
+      <main class="main-content">
+        <div class="media"> 
+          
+          <div class="img">
+            <img src="http://placehold.it/250x250" alt="Placeholder">
+          </div>
+
+          <h2 class="title">This is my title</h2>
+
+          <div class="content">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+               Duis vehicula vitae ligula sit amet maximus. Nunc auctor neque ipsum, 
+               ac porttitor elit lobortis ac. Vivamus ultrices sodales tellus et aliquam. 
+               Pellentesque porta sit amet nulla vitae luctus.
+               Praesent quis risus id dolor venenatis condimentum.
+            </p>
+          </div>
+          
+        </div>    
+      </main>
 
       <footer class="footer">© 2018 Fire Fly Tech Labs</footer>
     </div>
