--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
         <h1 class="page-title">Title and header here</h1>
       </header>
 
-      <aside class="side"> Aside stuff here</aside>
+      <aside class="side"> 
+        <p>Aside stuff here</p>
+      </aside>
+
       <main class="main-content">
         <div class="media"> 
           
