adding grid page

--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
         <h1 class="page-title">Title and header here</h1>
       </header>
 
-      <aside class="side"> Aside stuff here</aside>
-      <main class="main-content"> Here is where the main content goes</main>
+      <aside class="side">Aside stuff here</aside>
+      <main class="main-content">
+        Here is where the main content goes
+        <a href="google-clone.html">Go to next page</a>
+      </main>
 
       <footer class="footer">© 2018 Fire Fly Tech Labs</footer>
     </div>
