--- a/google-clone.html
+++ b/google-clone.html
@@ -1,64 +1,39 @@
 <!DOCTYPE html>
   <html lang="en">
+
   <head>
     <meta charset="UTF-8">
     <title>Type Fill</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="index.js"></script>
   </head>
-  <style>
 
-    .parent {
-        display: grid;
-        height: 100vh;
-        grid-template-columns: repeat(5, 1fr);
-        grid-template-rows: repeat(5, 1fr);
-        grid-column-gap: 0px;
-        grid-row-gap: 0px;
-    }
-
-    .div1 { grid-area: 1 / 1 / 6 / 6; background-color: #f7f7f7;}
-    .div2 { grid-area: 1 / 4 / 1 / 6;}
-    .div3 { grid-area: 2 / 2 / 3 / 5; background-color: lightblue;}
-    .div4 { grid-area: 3 / 2 / 4 / 3; background-color: pink;}
-    .div5 { grid-area: 3 / 3 / 4 / 4; background-color: yellow;}
-    .div6 { grid-area: 3 / 4 / 4 / 5; background-color: lightgreen;}
-    .div7 { grid-area: 5 / 1 / 6 / 6; background-color: orange;}
-
-    .div2Parent {
-        display: flex;
-        height: 3rem;
-    }
-    .pChild1 { flex: 1; align-self: center; margin: 0.25em; background-color: red;}
-    .pChild2 { flex: 1; align-self: center; margin: 0.25em; background-color: yellow;}
-    .pChild3 { flex: 1; align-self: center; margin: 0.25em; background-color: blue;}
-    .tac { text-align: center;}
-    .m0 {margin: 0;}
-    .pa-half {padding: 0.5rem;}
-    .ri {
-        padding: 1rem;
-        min-width: 25rem;
-        border: none;
-        border-radius: 2rem;
-        background-color: #f0eeee;
-    }
-  </style>
     <body>
         <div class="parent">
             <div class="div1">Logo Here</div>
             <div class="div2">
                 <div class="div2Parent">
-                    <p class="pChild1">profile</p>
-                    <p class="pChild2">links</p>
-                    <p class="pChild3">here</p>
+                    <p class="pChild1 tac">profile</p>
+                    <p class="pChild2 tac">links</p>
+                    <p class="pChild3 tac">here</p>
                 </div>
             </div>
             <div class="div3 tac">
                 <h4 class="m0 pa-half">Search Page </h4>
-                <input type="text" class="ri">
+                <input type="text" class="ri" id="searchInput">
+                <button class="btn ib" onclick="onSearch()">Find</button>
             </div>
-            <div class="div4">Shop</div>
-            <div class="div5">Videos</div>
-            <div class="div6">Images</div>
+            <div class="div4 tac">
+                <a href="#">Shop</a>
+                <div id="displaySearch"></div>
+            </div>
+            <div class="div5 tac">
+                <a href="#">Videos</a>
+            </div>
+            <div class="div6 tac">
+                <a href="#">Images</a>
+            </div>
+
             <div class="div7">Footer here</div>
         </div>
     </body>
