--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
         Here is where the main content goes
         <a href="google-clone.html">Go to next page</a>
       </main>
-
+      <div class="grid">
+        <div>Item 1</div>
+        <div>Item 2</div>
+        <div>Item 3</div>
+        <div>Item 4</div>
+        <div>Item 5</div>
+        <div>Item 6</div>
+      </div>
       <footer class="footer">© 2018 Fire Fly Tech Labs</footer>
     </div>
   </body>
